<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmpt276.kenney.portandstarboard.MainActivity">

    <TextView
        android:text="@string/how_to_navigate_a_ship"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shipnavtext"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/show_right_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonleft"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttonright" />

    <Button
        android:text="@string/show_left_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonleft"
        android:layout_below="@+id/shipnavtext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/means_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottombuttonleft"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/means_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/bottombuttonright" />

    <TextView
        android:text="@string/which_side_of_the_ship_is_the_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quiztext"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quiztext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/quizanswer"
        android:textSize="18sp" />

</RelativeLayout>
